FISH-1505 Upgrade TCK and Jakarta version

--- a/glassfish-tck-runner/pom.xml
+++ b/glassfish-tck-runner/pom.xml
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
-            <version>9.0.0-RC3</version>
+            <version>9.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
